--- a/notebooks/mult_repair_levels/Folk_NY_2018.ipynb
+++ b/notebooks/mult_repair_levels/Folk_NY_2018.ipynb
@@ -2,45 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "outputs": [],
-   "source": [
-    "# !pip uninstall virny -y"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "outputs": [],
-   "source": [
-    "# Install using an HTTP link\n",
-    "# !pip install git+https://github.com/DataResponsibly/Virny.git@development\n",
-    "\n",
-    "# Install using an SSH link\n",
-    "# !pip install git+ssh://git@github.com/DataResponsibly/Virny.git@development"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 3,
    "id": "248cbed8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "%load_ext autoreload\n",
@@ -49,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "id": "7ec6cd08",
    "metadata": {},
    "outputs": [],
@@ -62,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -93,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 6,
    "id": "7a9241de",
    "metadata": {},
    "outputs": [],
@@ -122,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "# ROOT_DIR = os.path.join(os.getcwd(), \"..\", \"..\")\n",
@@ -131,7 +96,7 @@
     "DB_COLLECTION_NAME = f'exp_{EXPERIMENT_NAME}'\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME)\n",
     "# FAIR_INTERVENTION_PARAMS_LST = [0.0 + 0.1 * i for i in range(11)]\n",
-    "FAIR_INTERVENTION_PARAMS_LST = [0.0, 0.2]\n",
+    "FAIR_INTERVENTION_PARAMS_LST = [0.0, 0.2, 0.4, 0.6]\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', EXPERIMENT_NAME, 'folk_ny_2018_config.yaml')\n",
     "metrics_computation_config = create_config_obj(config_yaml_path=config_yaml_path)"
@@ -151,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "from source.utils.db_functions import connect_to_mongodb\n",
@@ -164,13 +129,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current session uuid:  97dffddd-93ff-4167-b11f-985044c329c6\n"
+      "Current session uuid:  3e73afa0-9bcb-419b-9328-2582e0d36fae\n"
      ]
     }
    ],
@@ -198,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 10,
    "id": "6c55c6a0",
    "metadata": {},
    "outputs": [
@@ -207,7 +172,7 @@
       "text/plain": "  MAR MIL ESP MIG DREM NATIVITY DIS DEAR DEYE SEX RAC1P RELP CIT ANC SCHL  \\\n0   5   4   0   1    2        1   2    2    2   1     1    2   1   1   15   \n1   1   4   0   1    2        1   2    2    2   2     1    0   1   2   21   \n2   2   4   0   1    2        2   2    2    2   2     1    0   4   4   19   \n3   5   4   0   1    2        1   2    2    2   1     1   10   1   4   14   \n4   1   2   0   1    2        1   2    2    2   1     1    0   1   1   17   \n\n   AGEP  \n0    42  \n1    59  \n2    78  \n3    19  \n4    87  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>MAR</th>\n      <th>MIL</th>\n      <th>ESP</th>\n      <th>MIG</th>\n      <th>DREM</th>\n      <th>NATIVITY</th>\n      <th>DIS</th>\n      <th>DEAR</th>\n      <th>DEYE</th>\n      <th>SEX</th>\n      <th>RAC1P</th>\n      <th>RELP</th>\n      <th>CIT</th>\n      <th>ANC</th>\n      <th>SCHL</th>\n      <th>AGEP</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>5</td>\n      <td>4</td>\n      <td>0</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>15</td>\n      <td>42</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>4</td>\n      <td>0</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n      <td>2</td>\n      <td>21</td>\n      <td>59</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>4</td>\n      <td>0</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>0</td>\n      <td>4</td>\n      <td>4</td>\n      <td>19</td>\n      <td>78</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>5</td>\n      <td>4</td>\n      <td>0</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>10</td>\n      <td>1</td>\n      <td>4</td>\n      <td>14</td>\n      <td>19</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1</td>\n      <td>2</td>\n      <td>0</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>17</td>\n      <td>87</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 86,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,13 +185,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
       "text/plain": "(20000, 16)"
      },
-     "execution_count": 87,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "# Configs for an experiment iteration\n",
@@ -278,13 +243,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-06-29 02:59:09 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n"
+      "2023-06-30 01:32:35 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n"
      ]
     },
     {
@@ -293,10 +258,10 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.0, 0.2]',\n",
+      " 'fair_intervention_params_lst': '[0.0, 0.2, 0.4, 0.6]',\n",
       " 'model_init_seed': 100,\n",
       " 'preprocessing_techniques': 'No',\n",
-      " 'session_uuid': '97dffddd-93ff-4167-b11f-985044c329c6'}\n",
+      " 'session_uuid': '3e73afa0-9bcb-419b-9328-2582e0d36fae'}\n",
       "\n",
       "\n"
      ]
@@ -305,7 +270,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-06-29 02:59:09 experiment_interface.py INFO    : The dataset is preprocessed\n"
+      "2023-06-30 01:32:35 experiment_interface.py INFO    : The dataset is preprocessed\n"
      ]
     },
     {
@@ -328,7 +293,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "76f3a2a5b24141e8a12d8964ac8600fb"
+       "model_id": "2a683507e8f84910ae27a010bfc88f9b"
       }
      },
      "metadata": {},
@@ -338,22 +303,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/06/29, 02:59:09: Tuning LogisticRegression...\n",
-      "Fitting 3 folds for each of 8 candidates, totalling 24 fits\n"
+      "2023/06/30, 01:32:36: Tuning RandomForestClassifier...\n",
+      "Fitting 3 folds for each of 2 candidates, totalling 6 fits\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-06-29 02:59:13 experiment_interface.py INFO    : Models are tuned and saved to a file\n"
+      "2023-06-30 01:32:55 experiment_interface.py INFO    : Models are tuned and saved to a file\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/06/29, 02:59:13: Tuning for LogisticRegression is finished [F1 score = 0.7384780704281928, Accuracy = 0.7515000000000001]\n",
+      "2023/06/30, 01:32:55: Tuning for RandomForestClassifier is finished [F1 score = 0.7365457896525959, Accuracy = 0.7448333333333332]\n",
       "\n"
      ]
     },
@@ -363,7 +328,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "5d38eb43582c4e6b8bc057274a29f35f"
+       "model_id": "c54368439efa4376a3c243f45d73cbe7"
       }
      },
      "metadata": {},
@@ -375,7 +340,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "d54048ce96cf49d581db8dd2df248eca"
+       "model_id": "6f461afe2c3b4cb1900447edea690fea"
       }
      },
      "metadata": {},
@@ -387,7 +352,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "6c162de6aa224fa0947f9ab0212f08aa"
+       "model_id": "105a46c3370f4680ab7352a3a90f043a"
       }
      },
      "metadata": {},
@@ -399,7 +364,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "2ec26387f0654ad6bec5b92a54897e5b"
+       "model_id": "e6703577a0d34a179e59926fadd9b342"
       }
      },
      "metadata": {},
@@ -411,7 +376,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "6c623afd17224ac8a11f1fd3f784900b"
+       "model_id": "72c66d69e40145b4912d86f923e381d0"
       }
      },
      "metadata": {},
@@ -421,9 +386,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/06/29, 02:59:34: Tuning LogisticRegression...\n",
-      "Fitting 3 folds for each of 8 candidates, totalling 24 fits\n",
-      "2023/06/29, 02:59:36: Tuning for LogisticRegression is finished [F1 score = 0.7384342815041105, Accuracy = 0.7515]\n",
+      "2023/06/30, 01:34:12: Tuning RandomForestClassifier...\n",
+      "Fitting 3 folds for each of 2 candidates, totalling 6 fits\n",
+      "2023/06/30, 01:34:21: Tuning for RandomForestClassifier is finished [F1 score = 0.7362489708587582, Accuracy = 0.7443333333333334]\n",
       "\n"
      ]
     },
@@ -433,7 +398,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "75307e294dfc4e50b327f713b9ff83ac"
+       "model_id": "137a5d38aa954998bb21af1361462d61"
       }
      },
      "metadata": {},
@@ -445,7 +410,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "96036ce645b84b479f6f82b9c78fa320"
+       "model_id": "6451d6bc2de84b26b437bcaefddc8e8f"
       }
      },
      "metadata": {},
@@ -457,7 +422,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "fcbfc5cc74a4475f9ab2f668b24fe2e8"
+       "model_id": "804694e993b44a73bc9f440101f4767d"
       }
      },
      "metadata": {},
@@ -469,7 +434,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "95bd5db3462146cd8139792cb1a27d47"
+       "model_id": "4aae0c1c121a4ba68fed506527c94272"
       }
      },
      "metadata": {},
@@ -481,7 +446,147 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "0ca77e5855f044f79c0e1428efa0876c"
+       "model_id": "c41a45aef28047e2a7264ecef6782514"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023/06/30, 01:35:10: Tuning RandomForestClassifier...\n",
+      "Fitting 3 folds for each of 2 candidates, totalling 6 fits\n",
+      "2023/06/30, 01:35:21: Tuning for RandomForestClassifier is finished [F1 score = 0.7365592424704381, Accuracy = 0.7446666666666667]\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "Multiple runs progress:   0%|          | 0/2 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "2b8872bb0aed4055890fe9f93d97fe6d"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Analyze models in one run:   0%|          | 0/1 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "d9cbc20d58c74f24a41219c7c401aebb"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Classifiers testing by bootstrap:   0%|          | 0/10 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "be55c9e2c0864a98ac881f5ecf15f538"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Analyze models in one run:   0%|          | 0/1 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "8c5da67787ff450599b4757f33c9dffd"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Classifiers testing by bootstrap:   0%|          | 0/10 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "fb5120f29c3a4fbe93082fb173b299ea"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023/06/30, 01:36:34: Tuning RandomForestClassifier...\n",
+      "Fitting 3 folds for each of 2 candidates, totalling 6 fits\n",
+      "2023/06/30, 01:36:45: Tuning for RandomForestClassifier is finished [F1 score = 0.7370930472005219, Accuracy = 0.7451666666666666]\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "Multiple runs progress:   0%|          | 0/2 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "26c5501042d54ae492ddf6f98513ca76"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Analyze models in one run:   0%|          | 0/1 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "aae5dbba3c7f4ae292ec477861d3e62b"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Classifiers testing by bootstrap:   0%|          | 0/10 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "89e0c2ea8eb8486792aabf5032a106ac"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Analyze models in one run:   0%|          | 0/1 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "265696c6405045f8936b795c6975585b"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Classifiers testing by bootstrap:   0%|          | 0/10 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "4decb12e0c59400285c50a0f57cb01de"
       }
      },
      "metadata": {},
@@ -511,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 13,
    "outputs": [],
    "source": [],
    "metadata": {
