Added results for 0.3 and 0.4 for experiment 1 GA 2018

--- a/notebooks/mult_repair_levels_income_GA/Folk_GA_2018-Copy1.ipynb
+++ b/notebooks/mult_repair_levels_income_GA/Folk_GA_2018-Copy1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8c53fb17",
+   "id": "856c3651",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "44b09fb4",
+   "id": "9e6d0f99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1beb8a78",
+   "id": "d4c46217",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "766bd6b2",
+   "id": "5cd10acb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5ede40f5",
+   "id": "1f2118ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d929b45a",
+   "id": "f26abdff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9f13ae83",
+   "id": "4ca1e3bd",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "143ac667",
+   "id": "a3e50682",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1497f35a",
+   "id": "ed1cc532",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85bcc252",
+   "id": "a473570d",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5360c4f5",
+   "id": "b083368d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb8d8384",
+   "id": "7985324f",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fb0a6eb7",
+   "id": "3692ae94",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "960cd96e",
+   "id": "716566a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bc20b405",
+   "id": "394c4bf6",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c636ebc",
+   "id": "fa977e53",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6d004164",
+   "id": "a3544c9f",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "17e895b8",
+   "id": "e74189e4",
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9d9fd7a2",
+   "id": "eb315873",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "219f0c73",
+   "id": "e4f04323",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85549cb1",
+   "id": "cb8aec4f",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a195a791",
+   "id": "da815024",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "af6fd3bf",
+   "id": "df56fbee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96502c41",
+   "id": "d406f4f6",
    "metadata": {},
    "outputs": [
     {
@@ -507,6 +507,63 @@
       "intervention_param:  0.3\n",
       "2023/07/18, 09:38:39: Tuning RandomForestClassifier...\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-07-18 10:14:38 experiment_interface.py INFO    : Models are tuned and saved to a file\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023/07/18, 10:14:38: Tuning for RandomForestClassifier is finished [F1 score = 0.7844860930095351, Accuracy = 0.8095]\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ee2b4268dbba44788f2e4125670aa7a6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Multiple runs progress:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0889257cd7e94204ba1fe3c714b0e772",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Analyze models in one run:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fdab28b89575450f8326d56b1ae21406",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Classifiers testing by bootstrap:   0%|          | 0/200 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -528,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2519b111",
+   "id": "bb208a45",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -537,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "0f9b6cf5",
+   "id": "071472eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "4710e7b7",
+   "id": "b858c2ec",
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +863,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc62135c",
+   "id": "46a027f7",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -815,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "b461b266",
+   "id": "c1c095c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -847,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "bdcd5519",
+   "id": "8bd82f72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,7 +926,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f79bfde5",
+   "id": "d2308466",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -878,7 +935,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "57e1d348",
+   "id": "c9095979",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "60944074",
+   "id": "4ec76fbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -932,7 +989,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5ab310c",
+   "id": "d716af42",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -941,7 +998,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a88e984a",
+   "id": "a0931336",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,7 +1030,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37b20541",
+   "id": "39ac151e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -995,7 +1052,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88dc0a86",
+   "id": "1cd64b4b",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1004,7 +1061,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "429bd294",
+   "id": "7bdc664d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1036,7 +1093,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f38147a2",
+   "id": "b0b7bb61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1059,7 +1116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5eb1468",
+   "id": "e81f857d",
    "metadata": {},
    "outputs": [],
    "source": []
